HelloUltraviolet/Fixtures/RejectedSource/Patterns/RangePatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the RangePatternsDiagnostic rejected-source specimen.

expectedDiagnostic("", "diag.17.RangePatterns")
